<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_midnight_city"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_color_midnight_city">

        <TextView
            android:id="@+id/setting_title_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="-39dp"
            android:text="@string/exit_symbol"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/red_rectangle_background"/>

    </LinearLayout>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center" />

    <Button
        android:id="@+id/change_name_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/change_button" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/create_group_quiz_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/create_group_quiz" />

    <Button
        android:id="@+id/join_group_quiz_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/join_group_quiz" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/log_out" />

</LinearLayout>