<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/trophy_image"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/trophy"
            android:maxWidth="50dp"
            android:maxHeight="60dp"
            android:src="@drawable/trophy_image" />

        <com.lombokcyberlab.android.multicolortextview.MultiColorTextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:colors="@array/array_color"
            app:text="@string/game_title"
            app:textSize="40"
            app:textStyle="bold">

        </com.lombokcyberlab.android.multicolortextview.MultiColorTextView>

        <ImageView
            android:id="@+id/setting_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/setting"
            android:src="@drawable/setting_image" />

    </LinearLayout>


    <TextView
        android:id="@+id/category_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="85dp"
        android:text="@string/category"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/round_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/round"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/round"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/number_of_question"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/question"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/start_button"
        android:background="@drawable/zinc_rounded_rectangle_border"/>

</LinearLayout>