<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_midnight_city">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/gradient_color_midnight_city">

            <TextView
                android:id="@+id/add_question_title_text"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/add_question"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/exit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="-39dp"
                android:text="@string/exit_symbol"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@drawable/red_rectangle_background" />

        </LinearLayout>

        <TextView
            android:id="@+id/category_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <Spinner
            android:id="@+id/category"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/question"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/question"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/question"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/answer_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/answer_1"
            android:autofillHints="@string/answer_1"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/answer_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/answer_2"
            android:autofillHints="@string/answer_2"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/answer_3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/answer_3"
            android:autofillHints="@string/answer_3"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/answer_4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/answer_4"
            android:autofillHints="@string/answer_4"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/correct_answer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/correct_answer"
            android:autofillHints="@string/correct_answer"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/add_question_error_msg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>