<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_color"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <com.lombokcyberlab.android.multicolortextview.MultiColorTextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:colors="@array/array_color"
        app:text="@string/game_title"
        app:textSize="50"
        app:textStyle="bold">
    </com.lombokcyberlab.android.multicolortextview.MultiColorTextView>

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:inputType="textPersonName"
        android:visibility="visible"
        android:importantForAutofill="no"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/white_rounded_rectangle_border"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:visibility="visible"
        android:importantForAutofill="no"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/white_rounded_rectangle_border"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="333dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:background="@drawable/white_rounded_rectangle_border"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_und"
        android:textSize="15sp" />

</LinearLayout>