<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_color_midnight_city">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_color_midnight_city">

        <TextView
            android:id="@+id/help"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create_group_quiz"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="-39dp"
            android:text="@string/exit_symbol"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/red_rectangle_background"/>

    </LinearLayout>

    <TextView
        android:id="@+id/help_msg"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="@string/helpinfo"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/back" />
</LinearLayout>