<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zinc_rounded_rectangle_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/zinc_rounded_rectangle_border">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/rank"
            android:textSize="20sp"/>

        <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/player"
        android:textSize="20sp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/trophies"
            android:textSize="20sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/zinc_rounded_rectangle_border"
        app:layoutManager="LinearLayoutManager"></androidx.recyclerview.widget.RecyclerView>


</LinearLayout>